// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legacy Tests uiInput.canvasMouseMove canvasMouseMove 1`] = `undefined`;

exports[`Legacy Tests uiInput.canvasMouseMove canvasMouseMoveFire 1`] = `undefined`;

exports[`Legacy Tests uiInput.canvasTouchEnd 0 1`] = `undefined`;

exports[`Legacy Tests uiInput.canvasTouchMove 0 1`] = `undefined`;

exports[`Legacy Tests uiInput.getEarthScreenPoint 0 1`] = `
Float32Array [
  NaN,
  NaN,
  NaN,
]
`;

exports[`Legacy Tests uiInput.getEarthScreenPoint 1 1`] = `
Float32Array [
  NaN,
  NaN,
  NaN,
]
`;

exports[`Legacy Tests uiInput.getEarthScreenPoint 2 1`] = `
Float32Array [
  NaN,
  NaN,
  NaN,
]
`;

exports[`Legacy Tests uiInput.getEarthScreenPoint 3 1`] = `
Float32Array [
  NaN,
  NaN,
  NaN,
]
`;

exports[`Legacy Tests uiInput.getEarthScreenPoint 4 1`] = `
Float32Array [
  NaN,
  NaN,
  NaN,
]
`;

exports[`Legacy Tests uiInput.getSatIdFromCoord 0 1`] = `-1`;

exports[`Legacy Tests uiInput.getSatIdFromCoord 1 1`] = `-1`;

exports[`Legacy Tests uiInput.getSatIdFromCoord 2 1`] = `-1`;

exports[`Legacy Tests uiInput.getSatIdFromCoord 3 1`] = `-1`;

exports[`Legacy Tests uiInput.getSatIdFromCoord 4 1`] = `-1`;

exports[`Legacy Tests uiInput.getSatIdFromCoord 5 1`] = `-1`;

exports[`Legacy Tests uiInput.getSatIdFromCoordAlt 0 1`] = `undefined`;

exports[`Legacy Tests uiInput.getSatIdFromCoordAlt 1 1`] = `undefined`;

exports[`Legacy Tests uiInput.getSatIdFromCoordAlt 2 1`] = `undefined`;

exports[`Legacy Tests uiInput.getSatIdFromCoordAlt 3 1`] = `undefined`;

exports[`Legacy Tests uiInput.getSatIdFromCoordAlt 4 1`] = `undefined`;

exports[`Legacy Tests uiInput.getSatIdFromCoordAlt 5 1`] = `undefined`;

exports[`Legacy Tests uiInput.hidePopUps 0 1`] = `undefined`;

exports[`Legacy Tests uiInput.init 0 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 0 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 1 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 2 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 3 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 4 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 5 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 5 2`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 6 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 7 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 8 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 9 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 10 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 11 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 12 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 13 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 15 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 16 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 17 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 18 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 19 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 20 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 21 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 22 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 23 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 24 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 25 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 26 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 27 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 28 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 29 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 30 1`] = `undefined`;

exports[`Legacy Tests uiInput.rmbMenuActions 30 2`] = `undefined`;

exports[`Legacy Tests uiInput.unProject 0 1`] = `
Array [
  NaN,
  NaN,
  NaN,
]
`;

exports[`Legacy Tests uiInput.unProject 1 1`] = `
Array [
  NaN,
  NaN,
  NaN,
]
`;

exports[`Legacy Tests uiInput.unProject 2 1`] = `
Array [
  NaN,
  NaN,
  NaN,
]
`;

exports[`Legacy Tests uiInput.unProject 3 1`] = `
Array [
  NaN,
  NaN,
  NaN,
]
`;

exports[`Legacy Tests uiInput.unProject 4 1`] = `
Array [
  NaN,
  NaN,
  NaN,
]
`;

exports[`Legacy Tests uiInput.unProject 5 1`] = `
Array [
  NaN,
  NaN,
  NaN,
]
`;
